implement stroke (temp)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
 	<main>
-	  <section>
+	  <header>
+		<h3 class="nav-logo">Etch-A-Sketch</h3>
+		<ul>
+		  <li><a href="">Home</a></li>
+		  <li><a href="">How to use</a></li>
+		  <li><a href="">About me</a></li>
+		</ul>
+	  </header>
+	  <section id="canvas-section">
 		<div id="container">
 		</div>
 	  </section>
