implemented basic click-hover

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 	  <section id="canvas-section">
 		<div id="container">
 		</div>
+		<div>
+		  <label for="grid">Grid</label>
+		  <input id="grid" type="range" name="grid" min="16" max="64" value="16" data-sizing="px">
+
+		  <label for="color">Color</label>
+		  <input id="color" type="color" name="color" value="#ffc600">
+		</div>
 	  </section>
 	</main>
 	<script src="main.js"></script>
